--- a/myfirst.html
+++ b/myfirst.html
@@ -3,9 +3,7 @@
 <body>
 <h1> This is PHP</h1>
 
-<?php
-echo "My first PHP script!";
-?>
+  \\suggested changes for this code is to delete the php code
 
 </body>
 </html>
